# biocypher-kg-dmel-hsa

./: .gitattributes  .gitignore  MORK_README.md  Makefile  README.md  checkpoint_manager.py  create_knowledge_graph.py  docker-compose.yml  pyproject.toml  requirements.txt  schema_config.yaml.md
.github/scripts/: detect_config_changes.py  prepare_config.py
.github/workflows/: test-adapters.yml  test-schema.yml
aux_files/: go_subontology_mapping.pkl  roadmap_cell_type_to_ontology_map.pkl  sample_dbsnp_pos.pkl  sample_dbsnp_rsids.pkl
aux_files/dmel/: dmel_string_ensembl_to_uniprot_map.pkl  flybase_synonym_mapping.pkl
aux_files/go_subontology/: go_subontology_mapping.pkl
aux_files/hsa/: hsa_entrez_to_ensembl.pkl
biocypher-mork/: Dockerfile  README.md  client.py  data_loader.py  docker-compose.yml  requirements.txt
biocypher_cli/: README.md  cli.py
biocypher_cli/modules/: adapters.py  config.py  init.py  utils.py
biocypher_dataset_downloader/: __init__.py  dmel_download_data.py  download_data.py  download_manager.py  hsa_download_data.py
biocypher_dataset_downloader/protocols/: base.py
biocypher_metta/: __init__.py  kgx_writer.py  metta_writer.py  neo4j_csv_writer.py  neo4j_writer.py  networkx_writer.py  parquet_writer.py  prolog_writer.py
biocypher_metta/adapters/: bgee_adapter.py  brenda_tissue_ontology_adapter.py  cadd_adapter.py  candidate_cis_regulatory_enhancer_adapter.py  candidate_cis_regulatory_promoter_adapter.py  cell_line_ontology_adapter.py  cell_ontology_adapter.py  chebi_ontology_adapter.py  coxpresdb_adapter.py  dbsnp_adapter.py  dbsuper_adapter.py  dgv_variant_adapter.py  disease_ontology_adapter.py  encode_re2g_adapter.py  enhancer_atlas_adapter.py  epd_adapter.py  experimental_factor_ontology_adapter.py  fabian_adapter.py  gaf_adapter.py  gencode_adapter.py  gencode_exon_adapter.py  gencode_gene_adapter.py  (+29 more)
config/: adapters_config.yaml  adapters_config_sample.yaml  biocypher_config.yaml  biocypher_docker_config.yaml  biolink-model.yaml  data_source_config.yaml  download.yaml  schema_config.yaml  species_config.yaml  test_config.yaml  yaml_loader.py
downloader/: download_manager.py
hgnc_gene_data/: hgnc_data.pkl  hgnc_version.txt
notebooks/: cellxgene_exp_corr.ipynb
outpu/: type_defs.metta
samples/: fabian_sample_data.tsv  gwas-catalog_sample.tsv
schema_generator/: README.md  generate_data_source_schemas.py
scripts/: build_act.sh  build_mapping.py  build_paths.sh  convert_topaths.py  count_reactome_protein_roles.py  dmel_create_entrez_to_ensembl_map.py  download.py  download_data.py  load_paths.py  mork_client.py  mork_loader.py  mork_repl.py  neo4j_loader.py  pkl_cat.py
test/: conftest.py  test.py
(+119 files in other folders)
